# herd-immunity-simulator

./: Cargo.toml  herd_immunity_simulator-c00f7d098fbd687e.js  herd_immunity_simulator-c00f7d098fbd687e_bg.wasm  index.(old)html  index.html  readme.md  style.css
.cargo/: config.toml
.github/workflows/: wasm-deploy.yml
src/: lib.rs  main.rs
