[package]
name = "herd_immunity_simulator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "herd_immunity"
path = "src/main.rs"

[dependencies]
eframe = {version = "0.32.1", features = ["glow"]}
egui = "0.32.1"
rand = "0.9.2"
getrandom = {version = "0.3", features = ["wasm_js"]}
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4.50"

# Only for wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
