[package]
name = "herd_immunity_simulator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "herd_immunity"
path = "src/main.rs"

[dependencies]
eframe = {version = "0.32.1", features = ["glow"]}
egui = "0.32.1"
rand = "0.9.2"
console_error_panic_hook = "0.1"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }

# Only for wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = {version = "0.3", features = ["wasm_js"]}
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
